updated tmpl files for schedule mobile.

--- a/OracleJETApplication/templates/profile/schedules-timecards/schedules-timecards-small.tmpl.html
+++ b/OracleJETApplication/templates/profile/schedules-timecards/schedules-timecards-small.tmpl.html
@@ -23,7 +23,7 @@
         <div class="oj-col">
             <div class="oj-row">
                 <div class="oj-sm-6 oj-col shiftPoolDiv">
-                   <a href="#" class="shiftPoolLink">Shift Pool</a>
+                   <a data-bind="click: $parent.handleOpen('#shiftPoolModal')" class="shiftPoolLink">Shift Pool</a>
                 </div>
                 <div class="oj-sm-6 oj-col emailAndPringDiv">
                     <ul class="scheduleToolArea">
@@ -64,7 +64,7 @@
         <div class="oj-md-12">
             <div class="oj-row">
                 <div class="oj-sm-6 oj-col shiftPoolDiv">
-                   <a class="shiftPoolLink">Shift Pool</a>
+                   <a data-bind="click: $parent.handleOpen('#shiftPoolModal')" class="shiftPoolLink">Shift Pool</a>
                 </div>
                 <div class="oj-sm-6 oj-col emailAndPringDiv">
                     <ul class="scheduleToolArea">
