--- a/OracleJETApplication/templates/profile/schedules-timecards/schedule-timecard-modal/schedule-timecard-modal-small.tmpl.html
+++ b/OracleJETApplication/templates/profile/schedules-timecards/schedule-timecard-modal/schedule-timecard-modal-small.tmpl.html
@@ -1,4 +1,7 @@
-<div style="display:none" id="scheduleTimeCardDialog" title="" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', rootAttributes: {style: 'width: 375px; height: 600px;''}, 'position': {'my': 'start bottom', 'at': 'end+14 top'}}">
+<div style="display:none" id="scheduleTimeCardDialog" title="" data-bind="ojComponent:{component: 'ojDialog', 
+            initialVisibility: 'hide', 
+            rootAttributes: {style: 'width: 375px; height: 600px;'},
+            'position': {'my': 'start bottom', 'at': 'end+14 top'}}">
      <!-- Note: the user must provide the aria-labelledby attribute for the dialog to be accessible -->
      <div class="oj-dialog-header oj-helper-clearfix" aria-labelledby="dialogTitleId">
          <div id="dialogTitleId" class="oj-dialog-title"><h2> <span class="fa fa-clock-o"></span> Timecard for <span data-bind="text: $parent.personProfile().firstName + ' ' + $parent.personProfile().lastName"></span> </h2></div> 
