--- a/OracleJETApplication/templates/profile/schedules-timecards/shift-pool-modal/shift-pool-modal-small.tmpl.html
+++ b/OracleJETApplication/templates/profile/schedules-timecards/shift-pool-modal/shift-pool-modal-small.tmpl.html
@@ -1,4 +1,7 @@
-<div style="display:none" id="shiftPoolModal" title="" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', rootAttributes: {class: 'scheduleModal-dimensions'}, 'position': {'my': 'start bottom', 'at': 'end+14 top'}}">
+<div style="display:none" id="shiftPoolModal" title="" data-bind="ojComponent:{component: 'ojDialog', 
+            initialVisibility: 'hide', 
+            rootAttributes: {style: 'width: 375px; height: 600px;'}, 
+            'position': {'my': 'start bottom', 'at': 'end+14 top'}}">
     <div class="oj-dialog-header oj-helper-clearfix" aria-labelledby="dialogTitleId">
         <span id="dialogTitleId" class="oj-dialog-title">
             <h2>Current Shift Detail <span data-bind="text: $parent.firstName() + ' ' + $parent.lastName()"></span></h2>
